NetBSD Problem Report #52801

From www@NetBSD.org  Sat Dec  9 20:25:13 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B4DC47A19A
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  9 Dec 2017 20:25:13 +0000 (UTC)
Message-Id: <20171209202502.EC3AB7A1F7@mollari.NetBSD.org>
Date: Sat,  9 Dec 2017 20:25:02 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: wcstold_l present in headers and internals of libc, but missing symbol
X-Send-Pr-Version: www-1.0

>Number:         52801
>Category:       lib
>Synopsis:       wcstold_l present in headers and internals of libc, but missing symbol
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 09 20:30:00 +0000 2017
>Closed-Date:    Sun Dec 10 00:15:32 +0000 2017
>Last-Modified:  Tue Jan 16 12:05:00 +0000 2018
>Originator:     Kamil Rytarowski
>Release:        NetBSD 8.99.8 amd64
>Organization:
TNF
>Environment:
NetBSD chieftec 8.99.8 NetBSD 8.99.8 (GENERIC) #1: Thu Dec  7 02:50:00 CET 2017  root@chieftec:/public/netbsd-root/sys/arch/amd64/compile/GENERIC amd64
>Description:
wcstold_l appears to be a stub.
>How-To-Repeat:
$ git grep wcstold_l lib/libc                                                                                                
lib/libc/include/namespace.h:#define wcstold_l          _wcstold_l
lib/libc/stdio/vfwscanf.c:                                      long double res = wcstold_l(buf, &p,

$ grep -r wcstold_l /usr/include/                                                                                            
/usr/include/wchar.h:long double wcstold_l(const wchar_t * __restrict, wchar_t ** __restrict

$ nm /usr/lib/libc.so|grep wcstold_l                                                                                         
0000000000093a76 T _wcstold_l
>Fix:
N/A

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52801 CVS commit: src/lib/libc/locale
Date: Sat, 9 Dec 2017 17:48:00 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sat Dec  9 22:48:00 UTC 2017

 Modified Files:
 	src/lib/libc/locale: wcstod.c wcstof.c wcstold.c

 Log Message:
 PR/52801: Kamil Rytarowski: Add missing weak aliases for wcsto{f,d,ld}_l
 XXX: pullup-8


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/lib/libc/locale/wcstod.c
 cvs rdiff -u -r1.4 -r1.5 src/lib/libc/locale/wcstof.c \
     src/lib/libc/locale/wcstold.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kamil@NetBSD.org
State-Changed-When: Sun, 10 Dec 2017 01:15:32 +0100
State-Changed-Why:
Fixed by Christos:

 Modified Files:
 	src/lib/libc/locale: wcstod.c wcstof.c wcstold.c

 Log Message:
 PR/52801: Kamil Rytarowski: Add missing weak aliases for wcsto{f,d,ld}_l
 XXX: pullup-8


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/lib/libc/locale/wcstod.c
 cvs rdiff -u -r1.4 -r1.5 src/lib/libc/locale/wcstof.c \
     src/lib/libc/locale/wcstold.c


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52801 CVS commit: [netbsd-8] src/lib/libc/locale
Date: Tue, 16 Jan 2018 12:03:44 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Jan 16 12:03:44 UTC 2018

 Modified Files:
 	src/lib/libc/locale [netbsd-8]: wcstod.c wcstof.c wcstold.c

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #474):
 	lib/libc/locale/wcstod.c: revision 1.16
 	lib/libc/locale/wcstold.c: revision 1.5
 	lib/libc/locale/wcstof.c: revision 1.5
 PR/52801: Kamil Rytarowski: Add missing weak aliases for wcsto{f,d,ld}_l
 XXX: pullup-8


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.15.20.1 src/lib/libc/locale/wcstod.c
 cvs rdiff -u -r1.4 -r1.4.20.1 src/lib/libc/locale/wcstof.c \
     src/lib/libc/locale/wcstold.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.