PR/52801: Kamil Rytarowski: Add missing weak aliases for wcsto{f,d,ld}_l XXX: pullup-8