lib/libc/locale/wcstod.c
@@ -1,4 +1,4 @@
-/* $NetBSD: wcstod.c,v 1.15 2013/04/18 22:23:17 joerg Exp $ */
+/* $NetBSD: wcstod.c,v 1.16 2017/12/09 22:48:00 christos Exp $ */
 
 /*-
  * Copyright (c)2006 Citrus Project,
@@ -28,7 +28,7 @@
 
 #include <sys/cdefs.h>
 #if defined(LIBC_SCCS) && !defined(lint)
-__RCSID("$NetBSD: wcstod.c,v 1.15 2013/04/18 22:23:17 joerg Exp $");
+__RCSID("$NetBSD: wcstod.c,v 1.16 2017/12/09 22:48:00 christos Exp $");
 #endif /* LIBC_SCCS and not lint */
 
 #include "namespace.h"
@@ -42,6 +42,7 @@ __RCSID("$NetBSD: wcstod.c,v 1.15 2013/04/18 22:23:17 joerg Exp $");
 #include <wctype.h>
 
 __weak_alias(wcstod,_wcstod)
+__weak_alias(wcstod_l,_wcstod_l)
 
 #define _FUNCNAME	wcstod
 #define _RETURN_TYPE	double
